# 4tracks

./: CMakeLists.txt  CONTRIBUTING.md  README.md  juce_build_static_lib_cmake.txt  setup.sh
.github/workflows/: cmake.yml  tests.yml  workflow.yml
Source/: CMakeLists.txt  Constants.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils_functions.h
Source/Audio/: JuceIncludes.h  audioclip.cpp  audioclip.h  audiotrack.cpp  audiotrack.h  clip.cpp  clip.h  midiclip.cpp  midiclip.h  mixerpositionableaudiosource.cpp  mixerpositionableaudiosource.h  project.cpp  project.h  resamplingpositionableaudiosource.cpp  resamplingpositionableaudiosource.h  timeline.cpp  timeline.h  track.cpp  track.h
Source/Audio/AudioSources/: mixerpositionableaudiosource.cpp  mixerpositionableaudiosource.h  resamplingpositionableaudiosource.cpp  resamplingpositionableaudiosource.h
Source/Audio/Clip/: audioclip.cpp  audioclip.h  clip.cpp  clip.h  clipproperties.cpp  clipproperties.h  midiclip.cpp  midiclip.h
Source/Audio/Project/: project.cpp  project.h  projectproperties.cpp  projectproperties.h  projectsaver.cpp  projectsaver.h
Source/Audio/Resources/: audiofileloader.cpp  audioresource.cpp  audioresource.h  mididata.cpp  mididata.h  midinote.cpp  midinote.h
Source/Audio/Track/: track.cpp  track.h  trackeffectsrack.cpp  trackeffectsrack.h  trackproperties.cpp  trackproperties.h
Source/Audio/Utils/: audiofileloader.cpp  audiofileloader.h
Source/Graphics/: audiothumbnail.cpp  audiothumbnail.h  clip.cpp  clip.h  clip.ui  clipsgrid.cpp  clipsgrid.h  divisionsmarker.cpp  divisionsmarker.h  elidedlabel.cpp  elidedlabel.h  graphics_clip.cpp  graphics_clip.h  graphics_clip.ui  graphics_timeline.cpp  graphics_timeline.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  positionbaroverlay.cpp  positionbaroverlay.h  selection.cpp  selection.h  selectionoverlay.cpp  selectionoverlay.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  slider.cpp  slider.h  timeline.cpp  timeline.h  track.cpp  track.h  track.ui
Source/Graphics/Components/: audiothumbnail.cpp  audiothumbnail.h  clip.cpp  clip.h  clip.ui  clipeditorpanel.cpp  clipeditorpanel.h  clipsgrid.cpp  clipsgrid.h  divisionsmarker.cpp  divisionsmarker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  midiclippanel.cpp  midiclippanel.h  midieditor.cpp  midieditor.h  midinote.cpp  midinote.h  midinotespanel.cpp  midinotespanel.h  timeline.cpp  timeline.h  timelinescrollwidget.cpp  timelinescrollwidget.h  track.cpp  track.h  track.ui
Source/Graphics/Components/BottomPanel/: clipeditorpanel.cpp  clipeditorpanel.h  midiclippanel.cpp  midiclippanel.h  midieditor.cpp  midieditor.h  midinote.cpp  midinote.h  midinotespanel.cpp  midinotespanel.h  notevelocity.cpp  notevelocity.h  velocitypanel.cpp  velocitypanel.h
Source/Graphics/Components/Clips/: audiothumbnail.cpp  clip.cpp  clip.h
Source/Graphics/Components/Timeline/: clipsgrid.cpp  clipsgrid.h  divisionsmarker.h  timeline.cpp  timeline.h  timelineproperties.cpp  timelineproperties.h
Source/Graphics/Components/Tracks/: track.cpp  track.h
Source/Graphics/Dialogs/: settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
Source/Graphics/Managers/: selection.cpp  selection.h  selectionmanager.cpp  selectionmanager.h  thumbnailmanager.cpp  thumbnailmanager.h  timelineproperties.cpp  timelineproperties.h
Source/Graphics/Overlays/: positionbaroverlay.cpp  positionbaroverlay.h  selectionoverlay.cpp  selectionoverlay.h
Source/Graphics/Widgets/: elidedlabel.cpp  elidedlabel.h  slider.cpp  slider.h
Source/Graphics/Windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Source/Resources/Fonts/: fonts.qrc
Source/Resources/Icons/: icons.qrc
Source/Resources/Stylesheets/: main.qss  stylesheets.qrc
Source/Utils/: projectsaver.cpp  projectsaver.h  utils.cpp  utils.h  utils_functions.h
Tests/: CMakeLists.txt  tst_audiotrack.cpp
Tests/Audio/: audiocliptests.cpp  audioenginetests.cpp  audioenginetests.h  audiofileloadertests.cpp  midicliptests.cpp  mixeraudiosourcetests.cpp  projectsavertests.cpp  projecttests.cpp  tracktests.cpp
Tests/Graphics/: divisionsmarkertests.cpp  selectionmanagertests.cpp  thumbnailmanagertests.cpp  uitests.cpp  uitests.h
Tests/Utils/: utilsfunctionstests.cpp  utilstests.cpp  utilstests.h
